--- a/content/pages/how-it-works.yml
+++ b/content/pages/how-it-works.yml
@@ -41,7 +41,7 @@
     
     ##### Does the Technology Radar predict the future of cloud native?
 
-    The Radar is not mean to predict the future; it is a report of how cloud native is used at one specific point in time.
+    The Radar is not meant to predict the future; it is a report of how cloud native is used at one specific point in time.
 
     ##### What's the difference between the CNCF End User Technology Radar and other technology radars?
     
