add company codes

--- a/content/radars/2020-09-observability.yml
+++ b/content/radars/2020-09-observability.yml
@@ -156,31 +156,27 @@ companies:
   - pay-it-supporter
   - zendesk-supporter
   - the-new-york-times-supporter
-  - skyTBD
+  - sky-betting-gaming-supporter
   - zalando-supporter
-  - babylon TBD
+  - babylon-health-supporter
   - snow-software-supporter
-  - opentable TBD
-  - onecause TBD
-  - 1&1 TBD
+  - one-cause-supporter
+  - gmx-supporter
   - meltwater-supporter
   - n26-supporter
-  - rstudio TBD
-  - squarespace TBD
-  - entegral TBD
+  - r-studio-supporter
+  - squarespace-member
   - equity-zen-supporter
   - under-armour-supporter
   - intuit-member
   - lunar-supporter
   - mhi-vestas-offshore-wind-supporter
   - ricardo-ch-supporter
-  - shopify TBD
-  - kongsberg TBD
+  - shopify-supporter
   - dailymotion-supporter
-  - netmatch TBD
+  - net-match-supporter
   - spotify-member
   - apple-member
-  - mastercard TBD
+  - mastercard-member
   - indeed-member
-  - ticketmaster TBD
-  - groupon TBD
+  - ticket-master-supporter
