--- a/content/industries.yml
+++ b/content/industries.yml
@@ -26,3 +26,12 @@ dailymotion-supporter: Video Hosting
 meltwater-supporter: Software
 trivago-supporter: Travel
 zalando-supporter: E-commerce
+sky-betting-gaming-supporter: change-me
+babylon-health-supporter: change-me
+one-cause-supporter: change-me
+r-studio-supporter: change-me
+squarespace-member: change-me
+net-match-supporter: change-me
+mastercard-member: change-me
+ticket-master-supporter: change-me
+shopify-supporter: change-me
