add Kunal headshot

--- a/content/radars/2020-09-observability.yml
+++ b/content/radars/2020-09-observability.yml
@@ -28,7 +28,7 @@ team:
     linkedin: jonmoter
     title: Senior Principal Engineer at Zendesk
   - name: Kunal Parmar
-    photo: https://cloud.app.box.com/s/w2b9ealceuuoofzo5euhn8ddjacijek0
+    photo: https://www.cncf.io/wp-content/uploads/2020/09/Kunal_Parmar.jpg
     bio: |
       Kunal leads Box's cloud native team, driving the adoption of Kubernetes, Service Mesh, and Observability.
     linkedin: kunalparmar
