--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "image-size": "^0.8.3",
     "next": "^9.5.1",
     "node-static": "^0.7.11",
+    "puppeteer": "^5.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sanitize-html": "^1.27.0",
