--- a/content/texts.yml
+++ b/content/texts.yml
@@ -5,4 +5,4 @@ footer: |
   partnerships with our customers.
 
 hidden_companies: |
-  Some companies have requested not to be shown
+  Not all companies are shown
