Fix OpenTelemetry Github repo

--- a/content/radars/2020-09-observability.yml
+++ b/content/radars/2020-09-observability.yml
@@ -80,7 +80,7 @@ points:
       assess: 6
       hold: 2
   - name: OpenTelemetry
-    repo: open-telemetry
+    repo: open-telemetry/opentelemetry-specification
     level: assess
     votes:
       adopt: 5
