--- a/content/industries.yml
+++ b/content/industries.yml
@@ -35,3 +35,7 @@ net-match-supporter: Travel
 mastercard-member: Financial Services
 ticket-master-supporter: Entertainment
 shopify-supporter: E-commerce
+anova-supporter: IIoT
+apple-member: Consumer Electronics
+auth-keys-supporter: Software
+uswitch-supporter: Consumer Website
