--- a/content/radars/2020-06-continuous-delivery.yml
+++ b/content/radars/2020-06-continuous-delivery.yml
@@ -20,7 +20,7 @@ themes:
 video: https://www.youtube.com/embed/0792Q3l6tK8
 team:
   - name: Cheryl Hung
-    photo: https://www.cncf.io/wp-content/uploads/2020/08/14233189_10101878603974740_6349536740498881867_n-1-1-500x500.jpg
+    photo: https://media-exp1.licdn.com/dms/image/C4E03AQFTKuqDY0pAgQ/profile-displayphoto-shrink_800_800/0?e=1605139200&v=beta&t=Xc7d5pFfgmk6Sz0ECN0vowegzrlj8KFgOKw54UnRbHs
     bio: |
       Cheryl's mission is to make end users successful and productive with cloud native technologies
     twitter: oicheryl
