Add joi and remove ajv

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@babel/node": "^7.10.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@next/bundle-analyzer": "^9.5.1",
-    "ajv": "^6.12.4",
     "bulma": "^0.9.0",
     "chartist": "^0.11.4",
     "image-size": "^0.8.3",
+    "joi": "^17.3.0",
     "next": "^10.0.3",
     "node-static": "^0.7.11",
     "puppeteer": "^5.2.1",
