Make radars invalid

--- a/content/radars/2020-11-database-storage.yml
+++ b/content/radars/2020-11-database-storage.yml
@@ -49,7 +49,7 @@ team:
 points:
   - name: Redis
     homepage: https://redis.io/
-    level: adopt
+    level: lol
     votes:
       adopt: 26
       hold: 1
