--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "bulma": "^0.9.0",
     "chartist": "^0.11.4",
     "image-size": "^0.8.3",
-    "joi": "^17.3.0",
     "next": "^10.0.3",
     "node-static": "^0.7.11",
     "puppeteer": "^5.2.1",
@@ -25,7 +24,8 @@
     "sass": "^1.26.10",
     "sharp": "^0.26.0",
     "showdown": "^1.9.1",
-    "yaml": "^2.0.0-1"
+    "yaml": "^2.0.0-1",
+    "yup": "^0.32.6"
   },
   "resolutions": {
     "minimist": "^1.2.0"
