Fix a few errors

--- a/content/radars/2021-01-secrets-management.yaml
+++ b/content/radars/2021-01-secrets-management.yaml
@@ -1,8 +1,11 @@
 name: Secret Management
+themes:
+team: 
 draft: true
 points:
   - name: Hashicorp Vault
     level: adopt
+    homepage: 
     votes:
       adopt: 17
       trial: 2
@@ -23,7 +26,6 @@ points:
     level: assess
     votes:
       adopt: 1
-      trial: 0
       assess: 4
   - name: Encrypted respositories
     level: trial
@@ -47,4 +49,4 @@ points:
       trial: 2
       assess: 1
       hold: 1
-      
+companies:
