Secret management radar details

--- a/content/radars/2021-01-secrets-management.yaml
+++ b/content/radars/2021-01-secrets-management.yaml
@@ -1,11 +1,48 @@
 name: Secret Management
 themes:
-team: 
+  - headline: Vault has the broadest adoption across many companies and industries.
+    content: |
+      TBW
+  - headline: After Vault, groups tend to use the native solutions provided by their public cloud provider.
+    content: |
+      TBW
+  - headline: Certificate manager has become a popular choice in the Kubernetes ecosystem.
+    content: |
+      TBW
+  - headline: Other solutions in the space are fragmented across various levels of maturity and complexity.
+    content: |
+      TBW
+video: 
+team:
+  - name: James Nugent
+    photo: https://jen20.dev/images/profile.png
+    bio: |
+      James is an engineer on the Hybrid Cloud team at Apple, building platforms and tooling to ease adoption of first- and third-party cloud by teams across the company.
+    title: Hybrid Cloud Engineer at Apple
+    linkedin: jen20
+  - name: Steve Nolen
+    photo: https://rstudio.com/about/team/stevenolen/stevenolen.jpg
+    bio: |
+      Steve Nolen is a Site Reliability Engineer at RStudio, PBC working on RStudio’s SaaS offerings. Prior to RStudio, Steve worked at UCLA on a National Science Foundation grant-funded project, building the technology for a brand new data science high school curriculum.
+    title: Site Reliability Engineer at RStudio
+    linkedin: stevenlnolen
+  - name: Andrea Galbusera
+    photo:
+    bio: |
+      Engineering and co-founder at AuthKeys. Used to be an embedded engineer for more than a decade AuthKeys was my opportunity to turn into cloud native aware technologies. Going up and down the stack there, my main interests fall into revision control, CI/CD and anything in tech that helps managing complexity yet allowing things to scale at need.
+    title: Engineer and co-founder at AuthKeys
+    twitter: gizero76
+  - name: Tyler Gass
+    photo: https://5adywyhlzfg7-wtylergass-com.s3.amazonaws.com/profile.png
+    bio: |
+      Tyler is the Director of SRE at Peloton where he currently leads teams focused on kubernetes, developer tooling, security, and reliability. His mission is to provide a scalable and resilient platform for Peloton's engineers to power a worldclass member experience.
+    title: Director of SRE at Peloton
+    linkedin: wgass
 draft: true
 points:
   - name: Hashicorp Vault
     level: adopt
-    homepage: 
+    homepage:
     votes:
       adopt: 17
       trial: 2
@@ -50,3 +87,32 @@ points:
       assess: 1
       hold: 1
 companies:
+  - apple-member
+  - canada-health-infoway-member
+  - auth-keys-supporter
+  - zalando-supporter
+  - meltwater-supporter
+  - the-new-york-times-supporter
+  - peloton-interactive-member
+  - thermo-fisher-scientific-supporter
+  - equity-zen-supporter
+  - snow-software-supporter
+  - db-systel-supporter
+  - uswitch-supporter
+  - shopify-supporter
+  - workday-supporter
+  - gmx-supporter
+  - n26-supporter
+  - sony-interactive-entertainment-supporter
+  - box-supporter
+  - u-pchieve-member
+  - lunar-supporter
+  - price-spider-supporter
+  - pro-sieben-sat-1-supporter
+  - pay-it-supporter
+  - net-match-supporter
+  - trivago-supporter
+  - verizon-media-supporter
+  - zendesk-supporter
+  - intuit-member
+  - r-studio-supporter
