--- a/content/industries.yml
+++ b/content/industries.yml
@@ -38,3 +38,12 @@ shopify-supporter: E-commerce
 anova-supporter: IIoT
 auth-keys-supporter: Software
 uswitch-supporter: Consumer Website
+canada-health-infoway-member:
+peloton-interactive-member:
+db-systel-supporter:
+workday-supporter:
+sony-interactive-entertainment-supporter:
+u-pchieve-member:
+price-spider-supporter:
+pro-sieben-sat-1-supporter:
+verizon-media-supporter:
