--- a/content/radars/2021-01-secrets-management.yaml
+++ b/content/radars/2021-01-secrets-management.yaml
@@ -12,7 +12,7 @@ themes:
   - headline: Other solutions in the space are fragmented across various levels of maturity and complexity.
     content: |
       TBW
-video: 
+video: "tba"
 team:
   - name: James Nugent
     photo: https://jen20.dev/images/profile.png
@@ -27,7 +27,7 @@ team:
     title: Site Reliability Engineer at RStudio
     linkedin: stevenlnolen
   - name: Andrea Galbusera
-    photo:
+    photo: ""
     bio: |
       Engineering and co-founder at AuthKeys. Used to be an embedded engineer for more than a decade AuthKeys was my opportunity to turn into cloud native aware technologies. Going up and down the stack there, my main interests fall into revision control, CI/CD and anything in tech that helps managing complexity yet allowing things to scale at need.
     title: Engineer and co-founder at AuthKeys
@@ -42,46 +42,53 @@ draft: true
 points:
   - name: Hashicorp Vault
     level: adopt
-    homepage:
+    homepage: https://www.vaultproject.io/
     votes:
       adopt: 17
       trial: 2
       assess: 2
   - name: Certificate Manager
     level: adopt
+    homepage: https://cert-manager.io/docs/
     votes:
       adopt: 9
       trial: 1
       assess: 1
   - name: AWS Secrets Manager
     level: adopt
+    homepage: https://aws.amazon.com/secrets-manager/
     votes:
       adopt: 8
       trial: 5
       assess: 2
   - name: GCP Secrets Management
     level: assess
+    homepage: https://cloud.google.com/solutions/secrets-management
     votes:
       adopt: 1
       assess: 4
   - name: Encrypted respositories
     level: trial
+    homepage: ""
     votes:
       adopt: 1
       trial: 2
       hold: 2
   - name: Bitnami Sealed Secrets
     level: trial
+    homepage: https://github.com/bitnami-labs/sealed-secrets
     votes:
       adopt: 2
       trial: 3
   - name: AWS Key Management Service
     level: adopt
+    homepage: https://aws.amazon.com/kms/
     votes:
       adopt: 12
       trial: 1
   - name: Sops
     level: assess
+    homepage: https://github.com/mozilla/sops
     votes:
       trial: 2
       assess: 1
