add missing details and placeholders

--- a/content/radars/2021-01-secrets-management.yaml
+++ b/content/radars/2021-01-secrets-management.yaml
@@ -12,7 +12,7 @@ themes:
   - headline: Other solutions in the space are fragmented across various levels of maturity and complexity.
     content: |
       TBW
-video: "tba"
+video: https://www.youtube.com/embed/Ypq9P-9WBQI
 team:
   - name: James Nugent
     photo: https://jen20.dev/images/profile.png
@@ -27,7 +27,7 @@ team:
     title: Site Reliability Engineer at RStudio
     linkedin: stevenlnolen
   - name: Andrea Galbusera
-    photo: ""
+    photo: https://5adywyhlzfg7-wtylergass-com.s3.amazonaws.com/profile.png
     bio: |
       Engineering and co-founder at AuthKeys. Used to be an embedded engineer for more than a decade AuthKeys was my opportunity to turn into cloud native aware technologies. Going up and down the stack there, my main interests fall into revision control, CI/CD and anything in tech that helps managing complexity yet allowing things to scale at need.
     title: Engineer and co-founder at AuthKeys
@@ -67,9 +67,9 @@ points:
     votes:
       adopt: 1
       assess: 4
-  - name: Encrypted respositories
+  - name: Encrypted repositories
     level: trial
-    homepage: ""
+    homepage: https://spwhitton.name/tech/code/git-remote-gcrypt/
     votes:
       adopt: 1
       trial: 2
