--- a/content/industries.yml
+++ b/content/industries.yml
@@ -38,12 +38,12 @@ shopify-supporter: E-commerce
 anova-supporter: IIoT
 auth-keys-supporter: Software
 uswitch-supporter: Consumer Website
-canada-health-infoway-member:
-peloton-interactive-member:
-db-systel-supporter:
-workday-supporter:
-sony-interactive-entertainment-supporter:
-u-pchieve-member:
-price-spider-supporter:
-pro-sieben-sat-1-supporter:
-verizon-media-supporter:
+canada-health-infoway-member: Healthcare
+peloton-interactive-member: Welness
+db-systel-supporter: Software
+workday-supporter: Software
+sony-interactive-entertainment-supporter: Entertainment
+u-pchieve-member: Academia
+price-spider-supporter: E-commerce
+pro-sieben-sat-1-supporter: Broadcasting
+verizon-media-supporter: Internet
