add Andrea photo link

--- a/content/radars/2021-01-secrets-management.yaml
+++ b/content/radars/2021-01-secrets-management.yaml
@@ -27,7 +27,7 @@ team:
     title: Site Reliability Engineer at RStudio
     linkedin: stevenlnolen
   - name: Andrea Galbusera
-    photo: https://5adywyhlzfg7-wtylergass-com.s3.amazonaws.com/profile.png
+    photo: https://photos.app.goo.gl/tadne2LFSEWPrXwbA
     bio: |
       Engineering and co-founder at AuthKeys. Used to be an embedded engineer for more than a decade AuthKeys was my opportunity to turn into cloud native aware technologies. Going up and down the stack there, my main interests fall into revision control, CI/CD and anything in tech that helps managing complexity yet allowing things to scale at need.
     title: Engineer and co-founder at AuthKeys
