Remove YAML file

--- a/content/radars/2021-01-secrets-management.yml
+++ b/content/radars/2021-01-secrets-management.yml
@@ -80,7 +80,7 @@ points:
     votes:
       adopt: 2
       trial: 3
-  - name: AWS Key Management Service
+  - name: AWS KMS
     level: adopt
     homepage: https://aws.amazon.com/kms/
     votes:
