--- a/content/industries.yml
+++ b/content/industries.yml
@@ -39,7 +39,7 @@ anova-supporter: IIoT
 auth-keys-supporter: Software
 uswitch-supporter: Consumer Website
 canada-health-infoway-member: Healthcare
-peloton-interactive-member: Welness
+peloton-interactive-member: Wellness
 db-systel-supporter: Software
 workday-supporter: Software
 sony-interactive-entertainment-supporter: Entertainment
